[gd_scene load_steps=11 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_30.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://vehpl0ovng5d" path="res://Art/Level/Game3Level/Level_3_3/lxbd.png" id="3"]
[ext_resource type="Texture2D" uid="uid://deoescn8aylic" path="res://Art/Level/Game3Level/Level_3_3/lxbdfloor.png" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(6524.5, 1266)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(958.5, 1200)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(1046.75, 1200)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(103.5, 1200)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(1743.75, 1779)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(781.5, 1420)
script = null

[node name="Level_30" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="floor" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(3262.75, 1034)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(1577.75, -123)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(2772.63, -120)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(3551, -120)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(5471.13, 168.5)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(3208, -211)
shape = SubResource( "6" )
disabled = true
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="Lxbd" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2352, 296)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="Lxbdfloor" type="Sprite2D" parent="BackGround/floor_2" index="0"]
position = Vector2(2350, 545)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="exit" parent="." index="10"]
position = Vector2(4471, 331)
metadata/_edit_lock_ = true
